# tubeman

./: Cargo.toml  config.toml  flake.nix
src/: config.rs  feed.rs  main.rs
templates/: index.html
