[package]
name = "tubeman"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
atom_syndication = { version = "0.12", features = ["with-serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tera = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8.19"
